--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Manager 1.0 – PWN Panel</title>
+  <title>Manager 1.3 – PWN Panel</title>
   <meta name="theme-color" content="#0a1030" />
   <meta name="description" content="Manager 1.0 – panel PWN do zarządzania zleceniami, zadaniami, zarobkami i pracownikami." />
   <link rel="manifest" href="./manifest.json" />
@@ -35,8 +35,8 @@
       <div class="flex items-center gap-3">
         <img src="https://i.imgur.com/ikYb7tH.png" class="h-9 w-9 rounded-xl ring-1 ring-white/10" alt="logo"/>
         <div class="leading-tight">
-          <div class="font-semibold">Manager 1.0</div>
-          <div class="text-xs text-white/60">PWN Panel · Velorie UI</div>
+          <div class="font-semibold">Manager 1.3</div>
+          <div class="text-xs text-white/60">Owned Gracjan · Team Task Manager</div>
         </div>
       </div>
       <div class="flex items-center gap-2">
@@ -580,4 +580,5 @@
   </script>
 </body>
 </html>
+
 
